--- a/quarkus-reactive/local-deployment/animal-service/common.env
+++ b/quarkus-reactive/local-deployment/animal-service/common.env
@@ -1,5 +1,6 @@
 QUARKUS_HTTP_HOST=0.0.0.0
 QUARKUS_VERTX_EVENT_LOOPS_POOL_SIZE=1
+QUARKUS_DATASOURCE_REACTIVE_CACHE_PREPARED_STATEMENTS=true
 DB_HOST=postgres
 DB_PORT=5432
 DB_DATABASE=animals
