--- a/pom.xml
+++ b/pom.xml
@@ -21,17 +21,17 @@
 
         <!-- General setup -->
         <compiler-plugin.version>3.10.1</compiler-plugin.version>
-        <flyway-maven-plugin.version>9.8.1</flyway-maven-plugin.version>
+        <flyway-maven-plugin.version>9.17.0</flyway-maven-plugin.version>
         <lombok.version>1.18.26</lombok.version>
-        <surefire-plugin.version>3.0.0-M7</surefire-plugin.version>
+        <surefire-plugin.version>3.0.0</surefire-plugin.version>
 
         <!-- Quarkus setup -->
         <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
         <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-        <quarkus.platform.version>3.0.1.Final</quarkus.platform.version>
+        <quarkus.platform.version>3.0.3.Final</quarkus.platform.version>
 
         <!-- Spring setup -->
-        <spring.boot.version>3.0.5</spring.boot.version>
+        <spring.boot.version>3.0.6</spring.boot.version>
     </properties>
 
     <modules>
