Do not use tmpfs for db

--- a/quarkus-reactive/local-deployment/docker-compose.yml
+++ b/quarkus-reactive/local-deployment/docker-compose.yml
@@ -134,8 +134,8 @@ services:
     networks:
       - default
       - database
-    tmpfs:
-      - /var/lib/postgresql/data
+#    tmpfs:
+#      - /var/lib/postgresql/data
     command:
       - postgres
       - -c
